<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_send_mail_title">Send As Mail</string>
    <string name="action_cancel_title">Cancel</string>
    <string name="note_text_hint">Enter Note text</string>
    <string name="note_title_hint">Enter Note Title</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="menu_next">Next</string>
    <string name="title_activity_main">NoteKeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Notes">Notes</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_settings">Settings</string>



    <!-- settings Preferences -->
    <string name="display_name_title">Display Name</string>
    <string name="user_social_title">Favourite social media</string>
    <string name="user_email_address">Email Address</string>



    <string name="display_name_default">Your name</string>
    <string name="user_email_default">youremailAddress@host.com</string>
    <string name="social_media_default">https://plus.google.com/</string>
    <string name="action_previous_text">Previous</string>
    <string name="action_review_note">Review Note</string>
    <string name="app_is_initialized">isInitialized</string>
    <string name="backup_notes">Backup notes</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="create_new_note_fab_description">Create New Note</string>
</resources>
